Stopped overlaping buttons on user page - Bug #1513274
behatnotneeded

(cherry picked from commit 505003c0fc9a9b4d2949c5d787f09fac44378a3e)

--- a/htdocs/theme/raw/sass/typography/_typography.scss
+++ b/htdocs/theme/raw/sass/typography/_typography.scss
@@ -41,6 +41,12 @@ h1 {
         border-bottom: 1px solid #eee;
         &.invite-friend {
             padding-bottom: 5px;
+            .input-group {
+                margin-top: 0;
+                @media (min-width: $screen-sm-min) {
+                    margin-top:10px;
+                }
+            }
         }
         @media (max-width: $screen-xs-min) {
             margin-top: 5px;
